--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="show" id="overlay" style="display: block;">
-    <mat-spinner strokeWidth="20" mode="indeterminate"></mat-spinner>
+    <mat-spinner strokeWidth="20" diameter="200" mode="indeterminate"></mat-spinner>
     <label class="labelSpinner">TRAITEMENT EN COURS</label>
 </div>
