--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <spinner #spinner></spinner>
 
-
-<div>
-    <h2>{{title}}</h2>
-    <button (click)="onShowSpinner()"> show spinner</button>
+<div style="text-align: center;">
+    <h1 style="color:lightgray">{{title}}</h1>
+    <button style="width:200px; height:100px;" (click)="onShowSpinner()" >show spinner</button>
 </div>
