--- a/src/app/components/spinner/spinner.component.scss
+++ b/src/app/components/spinner/spinner.component.scss
@@ -1,5 +1,5 @@
 #overlay ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
-    stroke: #D14700;
+    stroke: #c200e9;
   }
   
   mat-spinner, .labelSpinner {
@@ -17,7 +17,7 @@
     margin-left: 45px;
     font-size: x-large;
     font-weight: bold;
-    color: #D14700;
+    color: #c200e9;
   }
   
   #overlay {
