--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; background-color: #1c1c1c; }
+html, body { height: 100%; background-color: #6b6b6b; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
