--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<spinner #spinner></spinner>
+<app-spinner #spinner></app-spinner>
 
 <div style="text-align: center;">
     <h1 style="color:lightgray">Spinner</h1>
