--- a/src/app/components/spinner/spinner.component.scss
+++ b/src/app/components/spinner/spinner.component.scss
@@ -1,31 +1,26 @@
-#overlay ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
-    stroke: #c200e9;
-  }
-  
-  mat-spinner, .labelSpinner {
-    z-index:999;  
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    overflow: show;
-    position:absolute;
-  }
-  
-  .labelSpinner {
-    margin-top: 130px;
-    margin-left: 45px;
-    font-size: x-large;
-    font-weight: bold;
-    color: #c200e9;
-  }
-  
-  #overlay {
-    position: fixed;
-    width:100%;
-    height:100%;
-    left:0;
-    top:0;
-    z-index:100000;
-    background-color: rgba(255,255,255,0.75);
-  }
+.overlay ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+  stroke: #c200e9;
+}
+
+/* à mettre dans styles.css ou styles.scss */
+// .mat-progress-spinner circle, .mat-spinner circle {
+//   stroke: red;
+// }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+p {
+  margin-top: 10px;
+}
